--- a/Marathon skills/Marathon skills/Properties/Resources.resx
+++ b/Marathon skills/Marathon skills/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="arise-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\arise-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Custom-Icon-Design-Mono-Business-2-Calendar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Custom-Icon-Design-Mono-Business-2-Calendar.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
